--- a/main.css
+++ b/main.css
@@ -136,7 +136,8 @@ td, th {
 
 .divpop {
   position: absolute;
-  top: 97%;
+  top: 100%;
+  margin-top: -3px;
   left: -2px;
   right: -2px;
   padding: .3em;
